--- a/src/App.css
+++ b/src/App.css
@@ -4,25 +4,28 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .app {
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  flex-wrap: wrap;
 }
 
 .main-content {
   display: flex;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .right-section {
-  width: 70%;
+  width: 100%;
   flex: 2;
   padding: 20px;
 }
 
 .left-section {
-  width: 28%;
+  width: 100%;
   flex: 1;
   padding: 20px;
   display: flex;
@@ -33,7 +36,7 @@ body {
 .upcoming-events {
   height: 250px;
   overflow-y: auto;
-  border: .8px solid #ddd;
+  border: 0.8px solid #ddd;
   padding: 7 0 10 10px;
   border-radius: 8px;
   background-color: white;
@@ -45,7 +48,7 @@ body {
 
 .upcoming-events h3 {
   margin: 0;
-  background: linear-gradient(to right,green,white);
+  background: linear-gradient(to right, green, white);
   font-size: 1.2em;
   font-weight: 600;
   padding: 5px;
@@ -98,8 +101,23 @@ body {
   background-color: #e03e3e;
 }
 
-.events-ops{
+.events-ops {
   background-color: white;
   border-radius: 10px;
   padding: 4px;
+}
+
+@media (max-width: 768px) {
+  .right-section,
+  .left-section {
+    width: 100%;
+    padding: 10px;
+  }
+  .calendar{
+    padding: 0;
+  }
+  .app {
+    flex-direction: column;
+    padding: 10px;
+  }
 }
